fix more overflow problems on mobile

--- a/less/random_diet_club.less
+++ b/less/random_diet_club.less
@@ -394,7 +394,7 @@ a {
 
 }
 .checkmark-wrapper-wrapper {
-  width: 350px;
+  max-width: 350px;
   height: auto;
   margin: 0 auto;
   position: relative;
@@ -541,8 +541,7 @@ body {
 
   .msg {
     opacity: 0;
-    width: 120%;
-    margin-left: -10%;
+    width: 100%;
     padding: 20px;
     background: rgba(249,245,236,.8);
     color: black;
